--- a/3.projekte/projekti-1/index.html
+++ b/3.projekte/projekti-1/index.html
@@ -44,36 +44,55 @@
             <div class="service-1">
                 <p>Web Development</p>
                 <img src="./assets/images/service1.jpg" alt="Service 1">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quidem perspiciatis debitis nam ullam modi?</p>
             </div>
             <div class="service-2">
                 <p>Software Development</p>
                 <img src="./assets/images/service2.jpg" alt="Service 2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat totam, voluptas expedita error dolores enim!</p>
             </div>
             <div class="service-3">
                 <p>Email Marketing</p>
                 <img src="./assets/images/service3.jpg" alt="Service 3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est itaque officia labore exercitationem consequuntur sint!</p>
             </div>
         </div>
         <!--Our Team-->
         <div class="our-team">
             <div class="team-1">
-
+                <img src="./assets/images/team1.jpg" alt="our team">
+                <p>Founder,CEO</p>
             </div>
             <div class="team-1">
-
+                <img src="./assets/images/team2.jpg" alt="our team">
+                <p>Lead Engineer</p>
             </div>
             <div class="team-1">
-                
+                <img src="./assets/images/team3.jpg" alt="our team">
+                <p>Manager</p>
             </div>
         </div>
         <!--Contact Us-->
         <div class="contact-us">
+            <div class="contact-us-email">
 
+            </div>
+            <div class="contact-us-phone-number">
+
+            </div>
         </div>
     </main>
     <!--Footer-->
     <footer>
+        <div class="logo-footer">
+            
+        </div>
+        <div class="navigate">
 
+        </div>
+        <div class="newsletter-and-social">
+
+        </div>
     </footer>
 </body>
 </html>
