--- a/3.projekte/projekti-1/index.html
+++ b/3.projekte/projekti-1/index.html
@@ -5,94 +5,118 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project 1</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
     <!--Header-->
     <header>
-        <!--Logo-->
-        <div class="logo">
-            <img src="./assets/images/itech.png" alt="Logo" width="100px">
+        <div>
+            <a href="#"><img src="./assets/images/logo 4B studio zi cutout.png" alt="Logo"></a>
         </div>
-        <!--Nav-->
         <nav>
             <ul>
+                <li><a href="#">Contact US</a></li>
+                <li><a href="#">Our Products</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Our Team</a></li>
-                <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
     </header>
     <!--Main-->
     <main>
-        <!--Image-->
-        <div class="img">
-            <img src="./assets/images/campaign-creators-gMsnXqILjp4-unsplash.jpg" width="1500px">
+        <!--hero img-->
+        <div class="hero-img">
+            <img src="./assets/images/logo 4B studio bardh cutout.png">
+            <h2>Living made better</h2>
         </div>
-        <!--Costumers-->
-        <div class="costumers">
-            
-        </div>
-        <!--About Us-->
+        <!--About US-->
         <div class="about-us">
-            <p>Who are we</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium facere id aperiam repudiandae optio dolore blanditiis tenetur nemo culpa, eum repellendus, officia exercitationem. Odio sit, hic sapiente eveniet corrupti maiores.</p>
-        </div>
-        <!--Services-->
-        <div class="services">
-            <p>Our Services</p>
-            <div class="service-1">
-                <p>Web Development</p>
-                <img src="./assets/images/service1.jpg" alt="Service 1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quidem perspiciatis debitis nam ullam modi?</p>
-            </div>
-            <div class="service-2">
-                <p>Software Development</p>
-                <img src="./assets/images/service2.jpg" alt="Service 2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat totam, voluptas expedita error dolores enim!</p>
-            </div>
-            <div class="service-3">
-                <p>Email Marketing</p>
-                <img src="./assets/images/service3.jpg" alt="Service 3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est itaque officia labore exercitationem consequuntur sint!</p>
-            </div>
-        </div>
-        <!--Our Team-->
-        <div class="our-team">
-            <div class="team-1">
-                <img src="./assets/images/team1.jpg" alt="our team">
-                <p>Founder,CEO</p>
-            </div>
-            <div class="team-1">
-                <img src="./assets/images/team2.jpg" alt="our team">
-                <p>Lead Engineer</p>
-            </div>
-            <div class="team-1">
-                <img src="./assets/images/team3.jpg" alt="our team">
-                <p>Manager</p>
-            </div>
-        </div>
-        <!--Contact Us-->
-        <div class="contact-us">
-            <div class="contact-us-email">
-
-            </div>
-            <div class="contact-us-phone-number">
-
-            </div>
-        </div>
-    </main>
-    <!--Footer-->
-    <footer>
-        <div class="logo-footer">
+            <h2 id="#">About Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto ut beatae itaque explicabo rerum harum ea aliquid placeatlaudantium! Facere consequuntur vero debitis. Quod temporibus maxime iste veritatis doloremque non praesentium, incidunt delectusaperiam, sequi architecto nihil quae provident dolor adipisci fugiat commodi sapiente nesciunt odit repudiandae itaque error blanditiis.Aperiam exercitationem iusto numquam consectetur suscipit consequatur itaque iure ut delectus, sequi voluptate, esse obcaecati eius abodio blanditiis nesciunt ex distinctio ea quisquam quasi placeat. Enim beatae iure dolor ut temporibus quas consequatur, laborum,corrupti delectus repellendus ducimus porro!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, facere itaque doloribus aliquid cum quo rem officia atperferendis eligendi quam ullam quae saepe unde, asperiores molestiae sapiente hic ad! Sed exercitationem, pariatur delectus nequequisquam labore earum cupiditate necessitatibus ducimus placeat, commodi ipsum vitae, aperiam vel enim. Reprehenderit, illum?</p>
             
+            <button>View Our Shop</button>
         </div>
-        <div class="navigate">
-
+        <!--Our Products-->
+        <h2 id="products">Our Products</h2>
+        <div class="rows">
+            <div class="column">
+                <div class="img">
+                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                </div>
+                <div class="img">
+                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                </div>
+                <div class="img">
+                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                </div>
+            </div>
+            <div class="column">
+                <div class="img">
+                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                </div>
+                <div class="img">
+                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                </div>
+                <div class="img">
+                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                </div>
+            </div>
+            <div class="column">
+                <div class="img">
+                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                </div>
+                <div class="img">
+                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                </div>
+                <div class="img">
+                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                </div>
+            </div>
         </div>
-        <div class="newsletter-and-social">
-
-        </div>
+        <!--Contact us-->
+        <div class="forms">
+            <div class="costum-3d">
+                <h2>Not finding what you are looking for?</h2>
+                <h3>Send a request with your costum 3d model idea</h3>
+                <form autocomplete="off" id="form">
+                    <div class="costum-3d-form" id="costum-3d-form-1">
+                        <label for="name">Name</label>
+                        <input type="text" placeholder="Your name..."  id="costum-3d-name" name="form">
+                    </div>
+                    <br>
+                    <div class="costum-3d-form" id="costum-3d-form-2">
+                        <label for="email">Email</label>
+                        <input type="email" placeholder="Your email..."  id="costum-3d-email" name="form">
+                    </div>
+                    <br>
+                    <div class="costum-3d-form" id="costum-3d-form-3">
+                        <input type="text-area" placeholder="Your costum 3d model..."  id="costum-3d-text" name="form">
+                        <input type="submit" value="SEND" id="costum-3d-form-send" name="form-send">
+                    </div>
+                </form>
+            </div>
+    </main>
+    <footer class="footer">
+        <div id="container">
+           <div class="row">
+           <div class="footer-col" id="info">
+               <p>3D modeling, rendering and animation studio. <br> High quality 3D models and renders.</p>
+               </div>
+            <div class="logo">
+                <img src="./assets/images/logo 4B studio bardh cutout.png" alt="logo" width="300px">
+                <p>Visit our main page <a href="https://4bstudio.eu">4b Studio</a></p>
+            </div>
+           <div class="footer-col" id="follow-us">
+                   <h4>follow us</h4>
+                   <div class="social-links">
+                        <a href="https://www.facebook.com/4Bstudio.eu" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/4bstudio.eu/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.behance.net/4b_studio/" target="_blank"><i class="fab fa-behance"></i></a>
+                   </div>
+               </div>
+           </div>
+       </div>
     </footer>
 </body>
 </html>
