--- a/3.projekte/projekti-1/index.html
+++ b/3.projekte/projekti-1/index.html
@@ -17,6 +17,7 @@
         <nav>
             <ul>
                 <li><a href="#">Contact US</a></li>
+                <li><a href="#">Shop</a></li>
                 <li><a href="#">Our Products</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
@@ -31,48 +32,59 @@
         </div>
         <!--About US-->
         <div class="about-us">
-            <h2 id="#">About Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto ut beatae itaque explicabo rerum harum ea aliquid placeatlaudantium! Facere consequuntur vero debitis. Quod temporibus maxime iste veritatis doloremque non praesentium, incidunt delectusaperiam, sequi architecto nihil quae provident dolor adipisci fugiat commodi sapiente nesciunt odit repudiandae itaque error blanditiis.Aperiam exercitationem iusto numquam consectetur suscipit consequatur itaque iure ut delectus, sequi voluptate, esse obcaecati eius abodio blanditiis nesciunt ex distinctio ea quisquam quasi placeat. Enim beatae iure dolor ut temporibus quas consequatur, laborum,corrupti delectus repellendus ducimus porro!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, facere itaque doloribus aliquid cum quo rem officia atperferendis eligendi quam ullam quae saepe unde, asperiores molestiae sapiente hic ad! Sed exercitationem, pariatur delectus nequequisquam labore earum cupiditate necessitatibus ducimus placeat, commodi ipsum vitae, aperiam vel enim. Reprehenderit, illum?</p>
-            
-            <button>View Our Shop</button>
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias voluptas enim nam ipsam consequuntur sequi illum amet deleniti similique ut quis, hic ipsum tempora repellat quae nesciunt quisquam qui! Voluptatum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis impedit optio, sequi earum hic, nulla veritatis laudantium recusandae aliquid sapiente esse error quis officiis aspernatur repellendus aut placeat nemo est similique laboriosam fugit repellat? Doloribus illum eveniet commodi repellendus sit nostrum ratione corrupti, itaque quo voluptate autem deserunt soluta voluptatum.</p>
         </div>
         <!--Our Products-->
         <h2 id="products">Our Products</h2>
         <div class="rows">
             <div class="column">
                 <div class="img">
-                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                    <div id="img-text">
+                        <h2>Product</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <button>View Product In Shop</button>
+                    </div>
                 </div>
                 <div class="img">
-                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                    <div id="img-text">
+                        <h2>Product</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <button>View Product In Shop</button>
+                    </div>
                 </div>
                 <div class="img">
-                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                    <div id="img-text">
+                        <h2>Product</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <button>View Product In Shop</button>
+                    </div>
                 </div>
             </div>
             <div class="column">
-                <div class="img">
-                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                <div class="img2">
+                    <div id="img-text">
+                        <h2>Product</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <button>View Product In Shop</button>
+                    </div>
                 </div>
-                <div class="img">
-                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                <div class="img2">
+                    <div id="img-text">
+                        <h2>Product</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <button>View Product In Shop</button>
+                    </div>
                 </div>
-                <div class="img">
-                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
+                <div class="img2">
+                    <div id="img-text">
+                        <h2>Product</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <button>View Product In Shop</button>
+                    </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="img">
-                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
-                </div>
-                <div class="img">
-                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
-                </div>
-                <div class="img">
-                    <img src="./assets/images/3 karrika amelia skena 2 3 ps.jpg" alt="product">
-                </div>
-            </div>
+            <button id="shop">View More In Our Shop</button>
         </div>
         <!--Contact us-->
         <div class="forms">
@@ -100,19 +112,18 @@
     <footer class="footer">
         <div id="container">
            <div class="row">
-           <div class="footer-col" id="info">
-               <p>3D modeling, rendering and animation studio. <br> High quality 3D models and renders.</p>
-               </div>
-            <div class="logo">
-                <img src="./assets/images/logo 4B studio bardh cutout.png" alt="logo" width="300px">
-                <p>Visit our main page <a href="https://4bstudio.eu">4b Studio</a></p>
+            <div class="footer-col">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, natus labore! Ab laudantium quibusdam dignissimos?</p>
+            </div>
+            <div class="footer-col">
+                <div class="logo"></div>
             </div>
            <div class="footer-col" id="follow-us">
                    <h4>follow us</h4>
                    <div class="social-links">
-                        <a href="https://www.facebook.com/4Bstudio.eu" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/4bstudio.eu/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.behance.net/4b_studio/" target="_blank"><i class="fab fa-behance"></i></a>
+                        <a href="#" ><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" ><i class="fab fa-instagram"></i></a>
+                        <a href="#" ><i class="fab fa-behance"></i></a>
                    </div>
                </div>
            </div>
