--- a/3.projekte/projekti-1/index.html
+++ b/3.projekte/projekti-1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project 1</title>
+    <title>4b Studio</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
@@ -16,10 +16,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Contact US</a></li>
+                <li><a href="#costum-3d">Costum 3d</a></li>
                 <li><a href="#">Shop</a></li>
-                <li><a href="#">Our Products</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#our-products">Our Products</a></li>
+                <li><a href="#about-us">About Us</a></li>
             </ul>
         </nav>
     </header>
@@ -31,11 +31,13 @@
             <h2>Living made better</h2>
         </div>
         <!--About US-->
+        <a class="anchor" id="about-us"></a>
         <div class="about-us">
             <h2>About Us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias voluptas enim nam ipsam consequuntur sequi illum amet deleniti similique ut quis, hic ipsum tempora repellat quae nesciunt quisquam qui! Voluptatum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis impedit optio, sequi earum hic, nulla veritatis laudantium recusandae aliquid sapiente esse error quis officiis aspernatur repellendus aut placeat nemo est similique laboriosam fugit repellat? Doloribus illum eveniet commodi repellendus sit nostrum ratione corrupti, itaque quo voluptate autem deserunt soluta voluptatum.</p>
         </div>
         <!--Our Products-->
+        <a class="anchor" id="our-products"></a>
         <h2 id="products">Our Products</h2>
         <div class="rows">
             <div class="column">
@@ -86,7 +88,8 @@
             </div>
             <button id="shop">View More In Our Shop</button>
         </div>
-        <!--Contact us-->
+        <!--costum 3d-->
+        <a class="anchor" id="costum-3d"></a>
         <div class="forms">
             <div class="costum-3d">
                 <h2>Not finding what you are looking for?</h2>
